--- a/iris-dataset-tasks.ipynb
+++ b/iris-dataset-tasks.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        " 'data_module': 'sklearn.datasets.data'}"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "(150, 4)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        " 'petal width (cm)']"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "       [5.9, 3. , 5.1, 1.8]])"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
        "4  setosa  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
        "149  virginica  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "max            2.500000  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -1176,10 +1176,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7a1ee9497260>]"
+       "[<matplotlib.lines.Line2D at 0x7a1ee3ae24e0>]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1561,6 +1561,15 @@
     "# Show the plot\n",
     "plt.suptitle(\"Pairplot of Iris Dataset\", y=1.02)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A pairplot is a grid of scatter plots that visualizes relationships between all numerical features in the data set, by pairs, for example, each subplot shows the relationship between two features, let's say petal length vs. petal width.\n",
+    "The there are histograms that shows the distribution of individual features.\n",
+    "And the colors shows the diferent species of iris."
    ]
   },
   {
